--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@storybook/addon-actions": "^4.1.11",
     "@storybook/addon-knobs": "^4.1.11",
     "@storybook/addon-links": "^4.1.11",
+    "@storybook/addon-options": "^4.1.11",
     "@storybook/addon-storyshots": "^4.1.11",
     "@storybook/addons": "^4.1.11",
     "@storybook/react": "^4.1.11",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "8.0.4",
+    "cypress": "^3.1.5",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "react-test-renderer": "^16.8.1",
