--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.13",
+    "@types/jest": "23.3.14",
     "@types/node": "10.12.21",
-    "@types/react": "16.8.1",
-    "@types/react-dom": "16.0.11",
-    "@types/react-test-renderer": "^16.9.0",
+    "@types/react": "16.9.15",
+    "@types/react-dom": "16.9.4",
+    "@types/react-test-renderer": "^16.9.1",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-knobs": "^4.0.0",
     "@types/storybook__react": "^4.0.0",
     "node-sass": "^4.11.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "2.1.3",
-    "typescript": "3.3.1"
+    "typescript": "3.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,12 +43,11 @@
     "@storybook/addon-storyshots": "^4.1.11",
     "@storybook/addons": "^4.1.11",
     "@storybook/react": "^4.1.11",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
     "babel-loader": "8.0.4",
     "cypress": "^3.1.5",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.9.1",
-    "react-test-renderer": "^16.8.1",
-    "require-context.macro": "^1.0.4",
+    "react-test-renderer": "^16.12.0",
     "storybook-addon-specifications": "^2.1.2",
     "testcheck": "^1.0.0-rc.2"
   }
