--- a/package.json
+++ b/package.json
@@ -3,14 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.14",
-    "@types/node": "10.12.21",
-    "@types/react": "16.9.15",
-    "@types/react-dom": "16.9.4",
-    "@types/react-test-renderer": "^16.9.1",
-    "@types/storybook__addon-actions": "^3.4.1",
-    "@types/storybook__addon-knobs": "^4.0.0",
-    "@types/storybook__react": "^4.0.0",
     "node-sass": "^4.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -19,11 +11,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "sb": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "start-storybook -p 6006"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,20 +24,24 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@storybook/addon-actions": "^4.1.11",
-    "@storybook/addon-knobs": "^4.1.11",
-    "@storybook/addon-links": "^4.1.11",
-    "@storybook/addon-options": "^4.1.11",
-    "@storybook/addon-storyshots": "^4.1.11",
-    "@storybook/addons": "^4.1.11",
-    "@storybook/react": "^4.1.11",
+    "@babel/standalone": "^7.2.2",
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/addon-storyshots": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
+    "@storybook/react": "^5.2.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@types/jest": "23.3.14",
+    "@types/node": "10.12.21",
+    "@types/react": "16.9.15",
+    "@types/react-dom": "16.9.4",
+    "@types/react-test-renderer": "^16.9.1",
     "babel-loader": "8.0.4",
     "cypress": "^3.1.5",
     "react-test-renderer": "^16.12.0",
-    "storybook-addon-specifications": "^2.1.2",
+    "require-context.macro": "^1.2.2",
     "testcheck": "^1.0.0-rc.2"
   }
 }
