--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006",
+    "cypress":  "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,7 +40,7 @@
     "@types/react-dom": "16.9.4",
     "@types/react-test-renderer": "^16.9.1",
     "babel-loader": "8.0.4",
-    "cypress": "^3.1.5",
+    "cypress": "^3.7.0",
     "react-test-renderer": "^16.12.0",
     "require-context.macro": "^1.2.2",
     "testcheck": "^1.0.0-rc.2"
